fix backstretch top margin

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -116,7 +116,7 @@
     // semi-transparent background is present.
     &.uom-backstretch {
       #backstretch-wrapper {
-        top: 175px;
+        top: 150px;
       }
     }
 
@@ -145,7 +145,7 @@
     // semi-transparent background is present.
     &.uom-backstretch {
       #backstretch-wrapper {
-        top: 190px;
+        top: 150px;
       }
     }
 
